--- a/project_ARCHIVES.html
+++ b/project_ARCHIVES.html
@@ -9,16 +9,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>ICTLab</title>
+    <title>ARCHIVES | ICT Lab</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -31,7 +32,7 @@
 
 <body>
 
-    <!-- Navigation Bar -->
+    <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -56,7 +57,7 @@
                             <li>
                                 <a href="project_swarms.html">SWARMS Project</a>
                             </li>
-                            <li>
+                            <li class="active">
                                 <a href="project_archives.html">ARCHIVES Project</a>
                             </li>
                             <li>
@@ -98,7 +99,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">ARCHIVES project
+                <h1 class="page-header">ARCHIVES project <br>
                     <small>Analysis and Reconstruction of Catastrophes in History within Interactive Virtual Environments and Simulations</small>
                 </h1>
                 <ol class="breadcrumb">
@@ -114,29 +115,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    </ol>
-
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img class="img-responsive" src="/img_archives_project/img_archives.png" alt="">
-                        </div>
-                    </div>
-
-                    <!-- Controls -->
-                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
-                </div>
+                <img class="img-responsive" src="./img_archives_project/img_archives.png" alt="">
             </div>
 
             <div class="col-md-4">
@@ -169,22 +148,23 @@
                 <h3 class="page-header">Related Projects</h3>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-sm-3 col-xs-6 text-center">
                 <a href="swarms.html">
                     <img class="img-responsive img-hover img-related" src="img_swarms_project/img_swarms_thumb.jpg" alt="">
+                    <br>
+                    <p>SWARMS Project</p>
                 </a>
             </div>
 
         </div>
         <!-- /.row -->
 
-        <hr>
-
         <!-- Footer -->
-        <footer>
+        <footer class="modal-footer">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <hr>
+                    <p>Copyright &copy; ICTLab</p>
                 </div>
             </div>
         </footer>
