--- a/news.html
+++ b/news.html
@@ -9,16 +9,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title> News | ICT LAB</title>
+    <title>News | ICT Lab</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,7 +33,6 @@
 <body>
 
     <!-- Navigation -->
-    <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">ICTLab</a>
+                <a class="navbar-brand" href="index.html"><strong>ICT</strong>Lab</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -65,10 +65,10 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown">
+                    <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">News and Events <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li>
+                            <li class="active">
                                 <a href="news.html">News</a>
                             </li>
                             <li>
@@ -98,7 +98,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header"> News | ICT Lab </h1>
+                <h1 class="page-header">News</h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
@@ -112,7 +112,7 @@
         <div class="row">
             <div class="col-md-6 img-portfolio">
                 <a href="item_new_1.html">
-                    <img class="img-responsive img-hover" src="img_new/healthomic.jpeg" alt="">
+                    <img class="img-responsive img-hover img-rounded" src="img_new/healthomic.jpeg" alt="">
                 </a>
                 <h3>
                     <a href="item_new_1.html">Call for internship 2016 (HealthOmics)</a>
@@ -121,7 +121,7 @@
             </div>
             <div class="col-md-6 img-portfolio">
                 <a href="item_new_2.html">
-                    <img class="img-responsive img-hover" src="img_new/new2.jpeg" alt="">
+                    <img class="img-responsive img-hover img-rounded" src="img_new/new2.jpeg" alt="">
                 </a>
                 <h3>
                     <a href="item_new_2.html">Call for bachelor internships at ICTLab</a>
@@ -135,7 +135,7 @@
         <div class="row">
             <div class="col-md-6 img-portfolio">
                 <a href="item_new_3.html">
-                    <img class="img-responsive img-hover" src="img_new/new3.1_thumb.png" alt="">
+                    <img class="img-responsive img-hover img-rounded" src="img_new/new3.1_thumb.png" alt="">
                 </a>
                 <h3>
                     <a href="item_new_3.html">ICTLab Poster: Epidemiological Risks Model for the Dengue Fever with Control Policies and Economic Mobility</a>
@@ -144,7 +144,7 @@
             </div>
             <div class="col-md-6 img-portfolio">
                 <a href="item_new_4.html">
-                    <img class="img-responsive img-hover" src="img_new/new4_thumb.jpg" alt="">
+                    <img class="img-responsive img-hover img-rounded" src="img_new/new4_thumb.jpg" alt="">
                 </a>
                 <h3>
                     <a href="item_new_4.html">ICTLab Poster: SWARMS (Say and Watch: Automated image/sound Recognition for Mobile monitoring Systems)</a>
@@ -158,7 +158,7 @@
         <div class="row">
             <div class="col-md-6 img-portfolio">
                 <a href="item_new_5.html">
-                    <img class="img-responsive img-hover" src="img_new/new5_thumb.jpg" alt="">
+                    <img class="img-responsive img-hover img-rounded" src="img_new/new5_thumb.jpg" alt="">
                 </a>
                 <h3>
                     <a href="item_new_5.html">Kick-off Meeting of SWARMS Project</a>
@@ -167,7 +167,7 @@
             </div>
             <div class="col-md-6 img-portfolio">
                 <a href="item_new_6.html">
-                    <img class="img-responsive img-hover" src="img_new/new6_thumb.jpg" alt="">
+                    <img class="img-responsive img-hover img-rounded" src="img_new/new6_thumb.jpg" alt="">
                 </a>
                 <h3>
                     <a href="item_new_6.html">Visit of USTH consortium to ICT Lab</a>
@@ -179,45 +179,12 @@
         </div>
         <!-- /.row -->
 
-        <!-- <hr> -->
-
-        <!-- Pagination -->
-        <!-- <div class="row text-center">
-            <div class="col-lg-12">
-                <ul class="pagination">
-                    <li>
-                        <a href="#">&laquo;</a>
-                    </li>
-                    <li class="active">
-                        <a href="#">1</a>
-                    </li>
-                    <li>
-                        <a href="#">2</a>
-                    </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
-                    <li>
-                        <a href="#">4</a>
-                    </li>
-                    <li>
-                        <a href="#">5</a>
-                    </li>
-                    <li>
-                        <a href="#">&raquo;</a>
-                    </li>
-                </ul>
-            </div>
-        </div> -->
-        <!-- /.row -->
-
-        <hr>
-
         <!-- Footer -->
-        <footer>
+        <footer class="modal-footer">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <hr>
+                    <p>Copyright &copy; ICTLab</p>
                 </div>
             </div>
         </footer>
